# Slime

./: .gitignore  LICENSE  README.md  __init__.py  brun.sh  build.sh  pyproject.toml  run.ps1
publish/python/slimeweb/: README.md  pyproject.toml  test.py
publish/python/slimeweb/SlimeWeb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
publish/python/slimeweb/slimeweb/: __init__.py  cli.py  plugin.py  pyproject.toml  slime.py  web_extras.py
publish/python/slimeweb/slimeweb/plugin/: cors.py  logger.py
publish/python/slimeweb/slimeweb/web/: __init__.py  web-0.1.0-cp314-cp314t-win_amd64.whl  web.cp314t-win_amd64.pyd
slimeweb/: __init__.py
slimeweb/lib/: __init__.py  cli.py  errors.py  plugin.py  slime.py  web_extras.py
slimeweb/lib/plugin/: __init__.py  logger.py
slimeweb/plugin/: cors.py  logger.py
slimeweb/test/: classic_test.py  httparena.py  test.py  ws_test.py
slimeweb/test/data/: dataset.json
slimeweb/test/template/: hello.html
slimeweb/test/templates/: cors.html  hello.html
slimeweb/web/: server.py
test/: check.py  classic_test.py  test.py
test/templates/: hello.html
web/: Cargo.toml  pyproject.toml
web/src/: constant.rs  lib.rs  request.rs  response.rs  server.rs  worker.rs
