[project]
name = "slime"
version = "0.1.0"
description = "A Simple webframework lib for python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-multipart>=0.1.0",
    "granian[all,pname]>=2.7.4",
    "maturin>=1.12.4",
    "orjson>=3.11.8",
    "pydantic>=2.12.5",
    "uvloop>=0.22.1; sys_platform == 'linux'",
    "watchdog>=6.0.0",
    "websockets>=16.0",
]
