[package]
name = "web"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "web"
crate-type = ["cdylib"]

[dependencies]
axum = { version ="0.8.8", features=["ws"] }
bytes = "1.11.1"
pyo3 = "0.27.0"
rayon = "1.11.0"
serde = { version="1.0.228",features = ["derive"] }
pythonize = "0.27"
serde_json = "1.0.149"
tokio = { version= "1.49.0", features= ["full"] }
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
subtle = "2.6.1"
minijinja = { version="2.16.0",features=["loader"] }
serde_urlencoded = "0.7.1"
multer = "3.1.0"
tower-http = {version ="0.6.8", features = ["fs","compression-gzip","compression-br","compression-zstd"] }
futures-util = "0.3.32"
tokio-util = "0.7.18"
uuid = { version="1.21.0",features=["v4"] }
tokio-stream = "0.1.18"
mime = "0.3.17"
dashmap = "6.1.0"
mimalloc-rust = "0.2.1"
pyo3-async-runtimes = "0.27.0"
lazy_static = "1.5.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }


[profile.release]
lto = true
